Opened 18 years ago

Closed 18 years ago

#1396 closed bug (fixed)

Terminal parses the shell arguments incorrectly (easy)

Reported by: axeld Owned by: jackburton
Priority: normal Milestone: R1
Component: Applications/Terminal Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

When passing arguments to the Terminal, it parses them incorrectly before passing them over to the shell. For example, this is what prevents the debug_server from starting a gdb session when the debugged application has spaces in its path.

It should just copy the existing argument vector into the one it passes to the shell (minus its own arguments). For compatibility with BeOS, Haiku's libroot.so already memorizes the original arguments in __libc_argc and __libc_argv.

Change History (4)

comment:1 by axeld, 18 years ago

Description: modified (diff)

comment:2 by bonefish, 18 years ago

Summary: Terminal parses the shell arguments incorrectlyTerminal parses the shell arguments incorrectly (easy)

comment:3 by jackburton, 18 years ago

Should be fixed in hrev21979.

comment:4 by jackburton, 18 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.