Stolen Ingo's Arguments class from Miniterminal and used it in place of GPL'd code in TermApp (slightly modified, and bugfixed, even :P). TermView now accepts an argument vector instead of a commandline. Same thing for Shell. Temporarily(?) removed some commandline options. This also fixes bug #1396 (tested)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21979 a95241bf-73f2-0310-859d-f6bbb57e9c96