src/apps/terminal/TermApp.cpp
@@ -9,6 +9,7 @@
 
 #include "TermApp.h"
 
+#include "Arguments.h"
 #include "CodeConv.h"
 #include "PrefHandler.h"
 #include "TermWindow.h"
@@ -31,25 +32,6 @@
 static bool sUsageRequested = false;
 static bool sGeometryRequested = false;
 
-struct standard_args {
-	char *name;
-	char *longname;
-	int priority;
-	int nargs;
-	const char *prefname;
-};
-
-struct standard_args standard_args[] = {
-	{ "-h", "--help", 90, 0, NULL },
-	{ "-f", "--fullscreen", 30, 0, NULL },
-	{ "-p", "--preference", 80, 1, NULL },
-	{ "-t", "--title", 70, 1, NULL },
-	{ "-geom", "--geometry", 50, 1, NULL },
-};
-
-int argmatch(char **, int, char *, char *, int, char **, int *);
-void sort_args(int, char **);
-
 
 const ulong MSG_ACTIVATE_TERM = 'msat';
 const ulong MSG_TERM_IS_MINIMIZE = 'mtim';
@@ -59,8 +41,11 @@ TermApp::TermApp()
 	: BApplication(TERM_SIGNATURE),
 	fStartFullscreen(false),
 	fWindowNumber(-1),
-	fTermWindow(NULL)
+	fTermWindow(NULL),
+	fArgs(NULL)
 {
+	fArgs = new Arguments();
+
 	fWindowTitle = "Terminal";
 	_RegisterTerminal();
 
@@ -78,6 +63,7 @@ TermApp::TermApp()
 
 TermApp::~TermApp()
 {
+	delete fArgs;
 }
 
 
@@ -167,73 +153,19 @@ TermApp::MessageReceived(BMessage* msg)
 void
 TermApp::ArgvReceived(int32 argc, char **argv)
 {
-	int skip_args = 0;
-	char *value = 0;
-
-	if (argc < 2)
-		return;
-
-	sort_args(argc, argv);
-	argc = 0;
-	while (argv[argc])
-		argc++;
-
-	// Print usage
-	if (argmatch(argv, argc, "-help", "--help", 3, NULL, &skip_args)) {
+	fArgs->Parse(argc, argv);
+	
+	if (fArgs->UsageRequested()) {
 		_Usage(argv[0]);
 		sUsageRequested = true;
 		PostMessage(B_QUIT_REQUESTED);
+		return;	
 	}
+	
+	if (fArgs->Title() != NULL)
+		fWindowTitle = fArgs->Title();
 
-	// Start fullscreen
-	if (argmatch(argv, argc, "-f", "--fullscreen", 4, NULL, &skip_args))
-		fStartFullscreen = true;
-
-	// Load preference file
-	if (argmatch(argv, argc, "-p", "--preference", 4, &value, &skip_args))
-		PrefHandler::Default()->Open(value);
-
-	// Set window title
-	if (argmatch(argv ,argc, "-t", "--title", 3, &value, &skip_args))
-		fWindowTitle = value;
-
-    	// Set window geometry
-    	if (argmatch(argv, argc, "-geom", "--geometry", 4, &value, &skip_args)) {
-		int width, height, xpos, ypos;
-
-		sscanf(value, "%dx%d+%d+%d", &width, &height, &xpos, &ypos);
-		if (width < 0 || height < 0 || xpos < 0 || ypos < 0
-			|| width >= 256 || height >= 256 || xpos >= 2048 || ypos >= 2048) {
-			fprintf(stderr, "%s: invalid geometry format or value.\n", argv[0]);
-			fprintf(stderr, "Try `%s --help' for more information.\n", argv[0]);
-			sUsageRequested = true;
-			PostMessage(B_QUIT_REQUESTED);
-		}
-		PrefHandler::Default()->setInt32(PREF_COLS, width);
-		PrefHandler::Default()->setInt32(PREF_ROWS, height);
-
-		fTermFrame.Set(xpos, ypos, xpos + 50, ypos + 50);
-		sGeometryRequested = true;
-   	 }
-
-	skip_args++;
-
-	if (skip_args < argc) {
-		// Check invalid options
-
-		if (*argv[skip_args] == '-') {
-			fprintf(stderr, "%s: invalid option `%s'\n", argv[0], argv[skip_args]);
-			fprintf(stderr, "Try `%s --help' for more information.\n", argv[0]);
-			sUsageRequested = true;
-			PostMessage(B_QUIT_REQUESTED);
-		}
-
-		fCommandLine += argv[skip_args++];
-		while (skip_args < argc) {
-			fCommandLine += ' ';
-			fCommandLine += argv[skip_args++];
-		}
-	}
+	fStartFullscreen = fArgs->FullScreen();
 }
 
 
@@ -277,14 +209,8 @@ TermApp::RefsReceived(BMessage* message)
 status_t
 TermApp::_MakeTermWindow(BRect &frame)
 {
-	const char *command = NULL;
-	if (fCommandLine.Length() > 0)
-		command = fCommandLine.String();
-	else
-		command = PrefHandler::Default()->getString(PREF_SHELL);
-
 	try {
-		fTermWindow = new TermWindow(frame, fWindowTitle.String(), command);
+		fTermWindow = new TermWindow(frame, fWindowTitle.String(), new Arguments(*fArgs));
 	} catch (int error) {
 		return (status_t)error;	
 	} catch (...) {
@@ -556,217 +482,13 @@ TermApp::_Usage(char *name)
 		"\n"
 		"Usage: %s [OPTION] [SHELL]\n", name);
 
-	fprintf(stderr, "  -p,     --preference         load preference file\n"
+	fprintf(stderr,
+		"  -h,     --help               print this help\n"    
+		//"  -p,     --preference         load preference file\n"
 		"  -t,     --title              set window title\n"
-		"  -geom,  --geometry           set window geometry\n"
-		"                               An example of geometry is \"80x25+100+100\"\n");
+		"  -f,     --fullscreen         start fullscreen\n"		
+		//"  -geom,  --geometry           set window geometry\n"
+		//"                               An example of geometry is \"80x25+100+100\"\n"
+		);
 }
 
-
-
-// This routine copy from GNU Emacs.
-// TODO: This might be a GPL licensing issue here. Investigate.
-int
-argmatch(char **argv, int argc, char *sstr, char *lstr,
-	int minlen, char **valptr, int *skipptr)
-{
-	char *p = 0;
-	int arglen;
-	char *arg;
-
-	// Don't access argv[argc]; give up in advance
-	if (argc <= *skipptr + 1)
-		return 0;
-
-	arg = argv[*skipptr+1];
-	if (arg == NULL)
-		return 0;
-
-	if (strcmp(arg, sstr) == 0) {
-		if(valptr != NULL) {
-			*valptr = argv[*skipptr+2];
-			*skipptr += 2;
-		} else
-			*skipptr += 1;
-		return 1;
-	}
-
-	arglen =(valptr != NULL &&(p = strchr(arg, '=')) != NULL
-			? p - arg : strlen(arg));
-	
-	if(lstr == 0 || arglen < minlen || strncmp(arg, lstr, arglen) != 0)
-		return 0;
-	else
-	if(valptr == NULL)
-	{
-		*skipptr += 1;
-		return 1;
-	}
-	else
-	if(p != NULL)
-	{
-		*valptr = p+1;
-		*skipptr += 1;
-		return 1;
-	}
-	else
-	if(argv[*skipptr+2] != NULL)
-	{
-		*valptr = argv[*skipptr+2];
-		*skipptr += 2;
-		return 1;
-	}
-	else
-	{
-		return 0;
-	}
-}
-
-// This routine copy from GNU Emacs.
-// TODO: This might be a GPL licensing issue here. Investigate.
-void
-sort_args(int argc, char **argv)
-{
-	/*
-		For each element of argv,
-		the corresponding element of options is:
-		0 for an option that takes no arguments,
-		1 for an option that takes one argument, etc.
-		-1 for an ordinary non-option argument.
-	*/
-	
-	char **newargv =(char **) malloc(sizeof(char *) * argc);
-	
-	int *options =(int *) malloc(sizeof(int) * argc);
-	int *priority =(int *) malloc(sizeof(int) * argc);
-	int to = 1;
-	int incoming_used = 1;
-	int from;
-	int i;
-	//int end_of_options = argc;
-	
-	// Categorize all the options,
-	// and figure out which argv elts are option arguments
-	for(from = 1; from < argc; from++)
-	{
-		options[from] = -1;
-		priority[from] = 0;
-		if(argv[from][0] == '-')
-		{
-			int match, thislen;
-			char *equals;
-			
-			// If we have found "--", don't consider any more arguments as options
-			if(argv[from][1] == '-' && argv[from][2] == 0)
-			{
-				// Leave the "--", and everything following it, at the end.
-				for(; from < argc; from++)
-				{
-					priority[from] = -100;
-					options[from] = -1;
-				}
-				break;
-			}
-			
-			// Look for a match with a known old-fashioned option.
-			for(i = 0; i <(int)(sizeof(standard_args) / sizeof(standard_args[0])); i++)
-				if(!strcmp(argv[from], standard_args[i].name))
-				{
-					options[from] = standard_args[i].nargs;
-					priority[from] = standard_args[i].priority;
-					if(from + standard_args[i].nargs >= argc)
-						fprintf(stderr, "Option `%s' requires an argument\n", argv[from]);
-					from += standard_args[i].nargs;
-					goto done;
-				}
-			
-			/*
-				Look for a match with a known long option.
-				MATCH is -1 if no match so far, -2 if two or more matches so far,
-				>= 0(the table index of the match) if just one match so far.
-			*/
-			if(argv[from][1] == '-')
-			{
-				match = -1;
-				thislen = strlen(argv[from]);
-				equals = strchr(argv[from], '=');
-				if(equals != 0)
-					thislen = equals - argv[from];
-				
-				for(i = 0;i <(int )(sizeof(standard_args) / sizeof(standard_args[0])); i++)
-					if(standard_args[i].longname 
-						&& !strncmp(argv[from], standard_args[i].longname, thislen))
-					{
-						if(match == -1)
-							match = i;
-						else
-							match = -2;
-					}
-					
-					// If we found exactly one match, use that
-					if(match >= 0)
-					{
-						options[from] = standard_args[match].nargs;
-						priority[from] = standard_args[match].priority;
-						
-						// If --OPTION=VALUE syntax is used,
-						// this option uses just one argv element
-						if(equals != 0)
-							options[from] = 0;
-						if(from + options[from] >= argc)
-							fprintf(stderr, "Option `%s' requires an argument\n", argv[from]);
-						from += options[from];
-					}
-			}
-			done: ;
-		}
-	}
-	
-	// Copy the arguments, in order of decreasing priority, to NEW
-	newargv[0] = argv[0];
-	while (incoming_used < argc) {
-		int best = -1;
-		int best_priority = -9999;
-
-		// Find the highest priority remaining option.
-		// If several have equal priority, take the first of them.
-		for (from = 1; from < argc; from++) {
-			if (argv[from] != 0 && priority[from] > best_priority) {
-				best_priority = priority[from];
-				best = from;
-			}
-			
-			// Skip option arguments--they are tied to the options.
-			if (options[from] > 0)
-				from += options[from];
-		}
-		
-		if (best < 0)
-			abort();
-		
-		// Copy the highest priority remaining option, with its args, to NEW.
-		// Unless it is a duplicate of the previous one
-		if (!(options[best] == 0 && ! strcmp(newargv[to - 1], argv[best]))) {
-			newargv[to++] = argv[best];
-			for(i = 0; i < options[best]; i++)
-				newargv[to++] = argv[best + i + 1];
-		}
-		
-		incoming_used += 1 +(options[best] > 0 ? options[best] : 0);
-		
-		// Clear out this option in ARGV
-		argv[best] = 0;
-		for (i = 0; i < options[best]; i++)
-			argv[best + i + 1] = 0;
-	}
-	
-	// If duplicate options were deleted, fill up extra space with null ptrs
-	while (to < argc)
-		newargv[to++] = 0;
-	
-	memcpy(argv, newargv, sizeof(char *) * argc);
-	
-	free(options);
-	free(newargv);
-	free(priority);
-}
